# energym-AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: generate_qr.py
src/energym_ai/: run.py  server.py
src/energym_ai/core/: pose_detector.py
src/energym_ai/exercises/: alternating_curl.py  bicep_curl.py  hammer_curl.py
src/energym_ai/output/: cloud_sync.py  esp32_alert.py  station_status.py  supabase_sync.py
src/energym_ai/utils/: config.py  geometry.py
tests/: test_bicep_curl.py  test_geometry.py
