[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energym-ai"
version = "0.1.0"
description = "EnerGym Edge AI module - pose estimation & form validation for gym workouts"
authors = [{name = "Kelompok 8 - II3240"}]
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.30",
    "opencv-python>=4.8.0",
    "numpy>=1.26.0,<2.0.0",
    "pyserial>=3.5",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "supabase>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.7",
]

[project.scripts]
energym-server = "energym_ai.server:run_server"
energym-run    = "energym_ai.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
